[tool.poetry]
name = "custody"
version = "0.0.0"
description = "Multi-tenant service for IPFS content encryption and keys management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
pydantic = "^1.10.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
rsa = "^4.9"
ipfshttpclient = "^0.7.0"
pycryptodome = "^3.15.0"
aioipfs = "^0.5.8"
hvac = "^1.1.0"
httpx = "^0.24.0"
boto3 = "^1.28.30"
pytest = "^7.4.0"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "5.12.0"
pylint = "^2.15.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
